apps/cedille/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cedille
  namespace: cedille
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: contour
  tls:
    - hosts:
        - cedille.prod.cedille.club
      secretName: cedille-cert-traefik-tls
  rules:
    - host: cedille.prod.cedille.club
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cedille-service
                port:
                  name: http
